# booleano

./: .codeclimate.yml  .travis.yml  CONTRIBUTING.rst  COPYING.txt  MANIFEST.in  Makefile  README.rst  conventions.conf  requirements.txt  setup.cfg  setup.py  tox.ini
branding/: COPYRIGHT.txt
docs/: Makefile
docs/source/: about.rst  changes.rst  conf.py  contributing.rst  glossary.rst  index.rst
docs/source/api/: exceptions.rst  index.rst  operations.rst  parser.rst
docs/source/manual/: glossary.rst  index.rst  intro.rst
docs/source/manual/operations/: functions.rst  index.rst  variables.rst
docs/source/manual/parsing/: convertible.rst  evaluable.rst  grammars.rst  index.rst
docs/source/tutorials/: convertible-parsing.rst  evaluable-parsing.rst  index.rst  pythonic-operations.rst
sample/: boolean_parser1.py  cmd_boolean_parser.py  cmd_boolean_parser_auto_symbol_table.py  eval_boolean_sample.py
src/booleano/: __init__.py  exc.py  utils.py
src/booleano/operations/: __init__.py  converters.py  core.py  operators.py  variables.py
src/booleano/operations/operands/: __init__.py  classes.py  constants.py  core.py  placeholders.py
src/booleano/parser/: __init__.py  core.py  grammar.py  parsers.py  scope.py  symbol_table_builder.py  testutils.py  trees.py
tests/: __init__.py  test_utils.py
tests/operations/: __init__.py  test_converters.py  test_operands.py  test_operators.py  test_variables.py
tests/parsing/: __init__.py  test_grammar.py  test_managers.py  test_parsers.py  test_scope.py  test_trees.py
