[metadata]
description-file = README.rst
[bdist_wheel]
universal = 1


[nosetests]
where = tests
verbose = 1
verbosity = 1
detailed-errors = 1
no-path-adjustment = 1
with-doctest = 1
with-coverage = 1
cover-erase = 1
cover-package = booleano
# Without this, the booleano.parser.testutils package would be ignored:
cover-tests = 1