[metadata]
description-file = README.rst
[bdist_wheel]
universal = 1


[coverage:run]
omit = docs

[isort]
line_length=119
default_section=THIRDPARTY
import_heading_firstparty=
known_first_party=booleano,tests
not_skip = __init__.py

[flake8]

ignore = E402

[nosetests]
where = tests
verbose = 1
verbosity = 1
detailed-errors = 1
no-path-adjustment = 1
with-doctest = 1
with-coverage = 1
cover-erase = 1
cover-package = booleano
# Without this, the booleano.parser.testutils package would be ignored:
cover-tests = 1